# access_control

./: Cargo.toml  README.md  canister_ids.json  demo.sh  demo_ic.sh  dfx.json  package-lock.json  package.json  webpack.config.js
src/access_control_backend/: Cargo.toml
src/access_control_frontend/src/: index.html  index.js
src/authz_canister/: Cargo.toml  authz_canister.did
src/authz_canister/src/: lib.rs
src/dapp_frontend/src/: index.js
src/resource_canister/: Cargo.toml  resource_canister.did
src/resource_canister/src/: lib.rs
